tests/parser-test-files/define-class.txt
================================================================================
1 Class name must be a symbol
================================================================================

(package test-package)

(define-class ("C" :a :b))

--------------------------------------------------------------------------------

error: Malformed class definition
  --> test:3:15
   |
 3 |  (define-class ("C" :a :b))
   |                 ^^^ expected symbol
